<resources>
    <!-- INCLUDE_CLIENT_INFO layout-->
    <!-- EditText -->
    <string name="client_name_hint">Name</string>
    <string name="client_phone_hint">Phone number</string>
    <string name="client_additional_info_hint">Additional information</string>
    <!-- Button -->
    <string name="client_delivery_date">DELIVERY DATE</string>
    <!-- TextView -->
    <string name="client_info_title">CLIENT INFO</string>

    <!-- INCLUDE_MEASUREMENT layout -->
    <!-- EditText -->
    <string name="cap_base_hint">Cap base</string>
    <!-- TextView -->
    <string name="measurement_title">MEASUREMENT</string>
    <string name="cap_title">CAP</string>
    <string name="top_title">TOP</string>
    <string name="top_or_gown_title">TOP/GOWN</string>
    <string name="trouser_title">TROUSER</string>
    <string name="trouser_or_skirt_title">TROUSER/SKIRT</string>

    <!-- INCLUDE_TOP layout -->
    <!--EditText-->
    <string name="shoulder_hint">Shoulder</string>
    <string name="chest_hint">Chest</string>
    <string name="bust_hint">Bust</string>
    <string name="long_sleeve_hint">Long sleeve</string>
    <string name="cuff_hint">Cuff</string>
    <string name="round_sleeve_hint">Round sleeve</string>
    <string name="short_sleeve_hint">Short sleeve</string>
    <string name="length_hint">Length</string>
    <string name="half_length_hint">Half trouser length</string>
    <string name="knee_length_hint">Knee trouser length</string>
    <string name="high_waist_hint">High waist</string>

    <!-- INCLUDE_TROUSER layout -->
    <!-- EditText-->
    <string name="waist_hint">Waist</string>
    <string name="thigh_hint">Thigh</string>
    <string name="bottom_hint">Bottom</string>
    <string name="hips_hint">Hips</string>

    <!-- Others -->
    <string name="app_name">Fashion Assistant</string>
    <string name="action_settings">Settings</string>

    <string name="digits">0123456789/.</string>
    <string name="title_activity_add_client2">Add new client</string>
    <string name="new_job_added">New job added</string>
    <string name="empty_name_error_message">A name is required</string>
    <string name="edit_client">Edit Client</string>
    <string name="edit_saved">Updated</string>
    <string name="menu_delete_client">Delete</string>
    <string name="menu_edit_client">Edit</string>
    <string name="date_dialog_ok">OK</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="date_dialog_delivery_date">Select delivery date</string>
    <string name="dialog_deliver_client">This client will be moved to Measurements</string>
    <string name="dialog_mark_delivered_title">Mark as delivered?</string>
    <string name="dialog_mark_delivered_ok">YES</string>
    <string name="pending_jobs">Pending jobs</string>
    <string name="measurements">Measurements</string>
    <string name="filter_clients">Filter clients</string>
    <string name="delivered">Delivered</string>
    <string name="new_measurement">New measurement added</string>
    <string name="top">TOP</string>
    <string name="trouser">TROUSER</string>
    <string name="phone_icon_description">phone icon</string>
    <string name="unavailable">Unavailable</string>
    <string name="no_pending_job">No pending job</string>

    <!-- Client detail UI-->
    <string name="tv_cap_base">Cap base:</string>
    <string name="tv_shoulder">Shoulder:</string>
    <string name="tv_chest">Chest:</string>
    <string name="tv_bust">Bust:</string>
    <string name="tv_long_sleeve">Long sleeve:</string>
    <string name="tv_short_sleeve">Short sleeve:</string>
    <string name="tv_cuff">Cuff:</string>
    <string name="tv_round_sleeve">Round Sleeve:</string>
    <string name="tv_length">Length:</string>
    <string name="tv_half_trouser_length">Half length:</string>
    <string name="tv_knee_trouser_length">Knee length:</string>
    <string name="tv_waist">Waist:</string>
    <string name="tv_high_waist">High waist:</string>
    <string name="tv_thigh">Thigh:</string>
    <string name="tv_bottom">Bottom:</string>
    <string name="tv_hips">Hips:</string>
    <string name="no_measurement">No measurement</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_notification">Notification</string>
    <string name="pref_default_interval">3</string>

    <plurals name="pref_interval_summary">
        <item quantity="one">%d day before delivery</item>
        <item quantity="other">%d days before delivery</item>
        <item quantity="zero">12 hours before delivery</item>
    </plurals>

</resources>
