<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    card_view:cardCornerRadius="@dimen/card_corner_radius"
    android:layout_marginTop="@dimen/vertical_margin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/vertical_margin"
        android:paddingLeft="@dimen/horizontal_margin"
        android:paddingRight="@dimen/horizontal_margin"
        android:paddingTop="@dimen/vertical_margin"
        android:layout_marginTop="@dimen/content_space_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/horizontal_margin"
            android:text="@string/measurement_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <TextView
            android:id="@+id/tv_cap_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/client_detail_margin"
            android:gravity="center_horizontal"
            android:text="@string/cap_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_cap_base"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_space_margin">

            <EditText
                android:id="@+id/et_cap_base"
                android:hint="@string/cap_base_hint"
                android:inputType="number"
                android:digits="@string/digits"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_top_title"
            android:text="@string/top_title"
            android:layout_marginTop="@dimen/client_detail_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

        <include layout="@layout/include_top"/>

        <TextView
            android:id="@+id/tv_trouser_title"
            android:text="@string/trouser_title"
            android:layout_marginTop="@dimen/client_detail_margin"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

        <include layout="@layout/include_trouser"/>

    </LinearLayout>

</android.support.v7.widget.CardView>